# ctrader-async

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  __init__.py  client.py  config.py  models.py  protobuf.py  pyproject.toml  repomix-output-spotware-OpenApiPy.md  requirements-dev.txt  requirements.txt  run_integration_tests.py  setup.py  verify_setup.py
api/: account.py  market_data.py  trading.py
auth/: __init__.py  authenticator.py
docs/: API_REFERENCE.md  BETTERSTACK_INTEGRATION.md  TRADINGVIEW_STRATEGY_ALERTS_AND_WEBHOOKS.md  repomix-output-spotware-OpenApiPy-full.md
examples/: advanced_protection_orders.py  basic_usage.py  event_driven_bot.py  historical_data.py  live_candle_streaming.py  margin_and_risk_management.py  market_orders.py  multi_symbol_ticks.py  order_book_depth.py  reconnect_stream_recovery.py  session_and_categories.py  streaming_ticks.py  trade_history_and_reporting.py  websocket_connection.py
messages/: OpenApiCommonMessages_pb2.py  OpenApiCommonModelMessages_pb2.py  OpenApiMessages_pb2.py  OpenApiModelMessages_pb2.py  __init__.py
protocol/: __init__.py  correlation.py  dispatcher.py  handler.py
streams/: __init__.py  multi_tick_stream.py  tick_stream.py
tests/: README.md  TESTING_GUIDE.md  TEST_SUMMARY.md  __init__.py  conftest.py  pytest.ini  test_advanced_order_fields.py  test_asset_catalog_and_symbol_assets.py  test_client_auto_enable.py  test_conversions.py  test_default_asset_converter.py  test_depth_streaming.py  test_execution_events_and_bulk_ops.py  test_history_api.py  test_integration.py  test_integration_new_features.py  test_model_bridge.py  test_model_bridge_deal_error.py  test_modify_order_advanced_fields.py  test_normalization.py  test_reconnect_should_retry.py  test_risk_api.py  test_state_cache_updater.py  test_stream_registry.py  test_stream_resubscribe_iterator_liveness.py  test_trade_history.py  test_typed_events_and_multitick.py  utils_integration_debug.py
transport/: base.py  protocol.py  tcp.py
utils/: __init__.py  concurrency.py  errors.py  metrics.py  model_bridge.py  normalization.py  reconnect.py  reliability.py  (+2 more)
(+36 files in other folders)
